<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C0D47A1"
    android:padding="30dp"
    tools:context=".ui.activities.BasicScoreCounter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/scoreTV"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/scoreTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="45dp" />

        <Button
            android:id="@+id/incrementScore"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/incrementScore" />

        <Button
            android:id="@+id/decrementScore"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/decrementScore" />

        <Button
            android:id="@+id/resetScore"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/resetScore" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/scoreNote"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:fontFamily="@font/poppins" />

    </LinearLayout>


</ScrollView>